// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct values when line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": "2.00",
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
    }
  }
  updateQuantity={[Function]}
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          20.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          19.45
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Button
      aria-label="Continue Shopping"
      className="c-cart-summary__buttons--continue o-button--sml"
      label="Continue shopping"
      status="secondary"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          aria-label="Continue Shopping"
          className="c-cart-summary__buttons--continue o-button--sml o-button o-button--secondary"
          disabled={false}
          role="button"
          tabIndex="0"
          type="button"
        >
          Continue shopping
        </button>
      </div>
    </Button>
    <Link
      href="/checkout"
    >
      <Button
        aria-label="Continue to payment"
        className="c-cart-summary__buttons--proceed o-button--sml"
        label="Continue to payment"
        onClick={[Function]}
        status="positive"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue to payment"
            className="c-cart-summary__buttons--proceed o-button--sml o-button o-button--positive"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue to payment
          </button>
        </div>
      </Button>
    </Link>
  </section>
</CartSummary>
`;

exports[`renders correct values when no line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [],
    }
  }
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          0.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <p
          className="u-bold"
        >
          TOTAL:
        </p>
      </dt>
      <dd>
        <p
          className="u-bold"
        >
          £
          3.45
        </p>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Button
      aria-label="Continue Shopping"
      className="c-cart-summary__buttons--continue o-button--sml"
      label="Continue shopping"
      status="secondary"
      type="button"
    >
      <div
        className="o-button__container"
      >
        <button
          aria-label="Continue Shopping"
          className="c-cart-summary__buttons--continue o-button--sml o-button o-button--secondary"
          disabled={false}
          role="button"
          tabIndex="0"
          type="button"
        >
          Continue shopping
        </button>
      </div>
    </Button>
    <Link
      href="/checkout"
    >
      <Button
        aria-label="Continue to payment"
        className="c-cart-summary__buttons--proceed o-button--sml"
        label="Continue to payment"
        onClick={[Function]}
        status="positive"
        type="button"
      >
        <div
          className="o-button__container"
        >
          <button
            aria-label="Continue to payment"
            className="c-cart-summary__buttons--proceed o-button--sml o-button o-button--positive"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            Continue to payment
          </button>
        </div>
      </Button>
    </Link>
  </section>
</CartSummary>
`;
